board: easy80920: fix VRX200 reset hook
Signed-off-by: Daniel Schwierzeck <daniel.schwierzeck@gmail.com>

--- a/board/easy80920.cfg
+++ b/board/easy80920.cfg
@@ -4,7 +4,7 @@ proc easy80920_mc_init {} {
 
 proc easy80920_reset_init {} {
     echo "EASY80920: reset init"
-    vrx200_hrst
+    vrx200_reset
     vrx200_cgu_init
     vrx200_mc_init_prepare
     easy80920_mc_init
